--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018 ToxycOS Project
+     Copyright (C) 2018 On My Nuts Experience
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     
     <!-- General app strings -->
-    <string name="hazard_title">Hazard</string>
+    <string name="hazard_title">My Nuts</string>
     <string name="add">Add</string>
     <string name="advanced">Advanced</string>
     <string name="cancel">Cancel</string>
@@ -37,7 +37,7 @@
     <string name="color_title">Color</string>
     <string name="colors_title">Colors</string>
 
-    <!-- hazard categories -->
+    <!-- mynuts categories -->
     <string name="recents_category">Recents</string>
     <string name="status_bar_category">Statusbar</string>
     <string name="system_category">System</string>
